--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">UiListsHomeWork</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="all">All</string>
+    <string name="motorcycles">Motorcycles</string>
+    <string name="taxi">Taxi</string>
+    <string name="cars_and_motorcycles"><![CDATA[Cars&Motorcycles]]></string>
 </resources>
